[tool.poetry]
name = "asyncebayscraper"
version = "0.1.0"
description = ""
authors = ["Yehor Sencha <senyehor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

